nginx-controller/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: fastapi-ingress
  namespace: default
spec:
  rules:
    - host: 34.123.233.243.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fastapi-new
                port:
                  number: 30000
