nginx-controller/sample.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: default
    name: fastapi-deployment
    labels:
      app: fastapi
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: fastapi
    template:
      metadata:
        labels:
          app: fastapi
      spec:
        containers:
        - name: fastapi
          image: docker.io/tringuyen180303/fastapi-new:latest
          ports:
          - containerPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: fastapi-service
spec:
  type: NodePort
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 30000
      targetPort: 30000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: fastapi-ingress
  namespace: default
spec:
  rules:
    - host: 34.123.233.243.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 30000
